integrated guarana-swing with core